Prevent tooltip wrap

--- a/ui/src/style/components/organizations-table.scss
+++ b/ui/src/style/components/organizations-table.scss
@@ -85,7 +85,7 @@ input[type="text"].form-control.orgs-table--input {
   height: 30px;
   margin-right: 4px;
   text-align: center;
-  width: 85px;
+  width: 88px;
   background-color: $g4-onyx;
   border-radius: 4px;
   line-height: 30px;
